@@ -1,3 +1,6 @@
+2017-02-05 (0.12.9)
+	COMMON: can now attach SUB/FUNCs as MAP fields
+
 2017-01-25 (0.12.9)
 	UI: CIRCLE drawing is now anti-aliased
 
